# smartg

./: .gitignore  .gitmodules  CHANGELOG.TXT  LICENCE.TXT  LICENCE_RNG.TXT  LISENCE.TXT  MANIFEST.in  Makefile  NOTES.TXT  Parametres.txt  Parametres_glitterlamb.txt  README.md  ReadMe.txt  ReadMe_RNGs.txt  TODO.TXT  Voigt_gpu.py  albedo.py  analyse comparaison.py  analyse optimisation.py  analyse quart.py  analyse resultats.py  analyse_comparaison.py  analyse_optimisation_avecX.py  analyse_optimisation_sansX_256.py  analyse_optimisation_sansX_512.py  analyse_projection.py  analyse_quart.py  analyse_resultats.py  analyse_symetrie.py  atmosphere.py  bandset.py  config.py  environment-extra.yml  environment.yml  examples_tests.py  kdis.py  makefile  performance.py  pyproject.toml  release.py  (+7 more)
auxdata/samples/: alb.base  list_pf_aer.txt  list_pf_ocean.txt  pf_maritime_clean_490nm_layer-49.txt  pf_ocean_mm_chl1.txt  profil.atm.base  profil.oce.base
auxdata/validation/: ml30_AOS_I  ml30_AOS_II.nc  ml60_AOS_I  ml60_AOS_II.nc
auxdata/water/: aph_bricaud_1998.txt
doc/: Makefile  api.rst  atmosphere.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
fic/: pf_ocean_1.0_443nm.txt
input/: PP-Rayleigh-Aerosol-Glitter-1e9_photons.inp  PP-Rayleigh-Aerosol-Sol_noir-1e9_photons.inp  PP-Rayleigh-Sol_noir-1e9_photons.inp  SP-Rayleigh-Aerosol-Glitter-1e9_photons.inp  SP-Rayleigh-Aerosol-Glitter-Lambert-Ozone_1e9_photons.inp  SP-Rayleigh-Aerosol-Glitter-Lambert_1e9_photons.inp  SP-Rayleigh-Aerosol-Glitter-Ocean-1e9_photons.inp  SP-Rayleigh-Aerosol-Sol_noir-1e10_photons.inp  SP-Rayleigh-Aerosol-Sol_noir-1e9_photons.inp  SP-Rayleigh-Sol_noir-1e9_photons.inp
notebooks/: Paper-smartg-figures-2018.ipynb  Validation_obj3DSurfaceRoughness.ipynb  Validation_smartg_compilation.ipynb  demo_notebook-3D.ipynb  demo_notebook.html  demo_notebook.ipynb  demo_notebook_ALIS.ipynb  demo_notebook_objects.ipynb  old_demo_notebook.ipynb  validation_SMARTG_IPRT_phaseA.ipynb  validation_SMARTG_IPRT_phaseB-C2.ipynb
profil/: 103c_mol_0.236_ztop_100km  103c_mol_0.236_ztop_25km  molec_H8_0.236_AER_0_2km_0.3  molec_new_profil_mol_H8_AER_0_2_443
resultat/: PP-Rayleigh-Aerosol-Glitter-1e9_photons.inp  PP-Rayleigh-Aerosol-Sol_noir-1e9_photons.inp  PP-Rayleigh-Sol_noir-1e9_photons.inp  SP-Rayleigh-Aerosol-Glitter-1e9_photons.inp  SP-Rayleigh-Aerosol-Sol_noir-1e10_photons.inp  SP-Rayleigh-Aerosol-Sol_noir-1e9_photons.inp  SP-Rayleigh-Sol_noir-1e9_photons.inp
scripts/: .env  I_cuda_sos.py  I_fortran_sos.py  U_fortran_cuda.py  analyse_2D.py  analyse_Q.py  analyse_Q_cuda_sos.py  analyse_U.py  analyse_U_cuda_sos.py  analyse_comparaison.py  analyse_comparaison_cudas.py  analyse_cuda_sos.py  analyse_cuda_sos_180.py  analyse_fortran_cuda.py  analyse_fortran_cuda_180.py  analyse_fortran_sos.py  analyse_optimisation_sansX_256.py  analyse_polarisation.py  analyse_polarisation_cuda_sos.py  analyse_projection.py  analyse_rapide_resultats.py  analyse_resultats.py  analyse_statistiques.py  comparaison_cudas.py  main.py  main_jax.py  pre-commit  quantification_bruit.py  quantification_bruit_fortran.py  setup.sh
scripts/old/: I_fortran_cuda.py  LP_cuda_sos.py  LP_fortran_cuda.py  Q_cuda_sos.py  Q_fortran_cuda.py  U_cuda_sos.py  analyse_fortran_cuda.py  analyse_fortran_cuda_180.py  analyse_optimisation_avecX.py  analyse_optimisation_sansX_512.py  analyse_rapide_resultats.py  analyse_symetrie.py  comparaison_cudas.py  resultats_cuda.py
smartg/: albedo.py  atmosphere.py  auxdata.py  bandset.py  cli.py  config.py  diffgeom.py  geometry.py  histories.py  iprt.py  kdis.py  kernel2.cu  lib3D.py  libATM3D.py  reptran.py  rrs.py  shape.py  smartg.py  transform.py  truncation.py  visualizegeo.py  vrs.py  water.py
smartg/iprt/: iprt.py  iprt_phase3_runs.py
smartg/notebooks/: Validation_smartg_compilation.ipynb  demo_notebook.ipynb  demo_notebook_objects.ipynb  validation_SMARTG_IPRT_phaseA.ipynb  validation_SMARTG_IPRT_phaseB-C2.ipynb
smartg/obselete_files/: README.md  iop_PandR.py
smartg/obselete_files/cython/: waterPR.pyx
smartg/src/: communs.h  device.cu  device.h  geometry.h  helper_math.h  kernel2.cu  kernel2.h  shapes.h  transform.h
smartg/tests/: test_OPAC.py  test_cuda.py  test_notebook.py  test_profile.py  test_quick_iprt_phaseA.py  test_smartg.py  test_smartg_jax.py
smartg/tools/: PAR.py  cdf.py  interp.py  luts.py  modified_environ.py  phase.py  progress.py  runOS_template.ksh  smartg_view.py  tools.py
smartg/tools/analyze/: smartg_analyze.py
smartg/tools/water/: iop_mm.py  iop_spm.py  phase_functions.py  water_absorption.py  (+1 more)
src/: checkGPUcontext.cu  checkGPUcontext.h  communs.h  comparaison.py  device.cu  device.cu.orig  device.h  geometry.h  helper_math.h  host.cu  host.h  main.cu  main.h  perfo.h  quart.py  resultats.py  shapes.h  transform.h
tests/: conftest.py  test_cuda.py  test_luts.py  test_notebook.py  test_profile.py  test_quick_iprt_phaseA.py  test_smartg.py  test_smartg_jax.py
tools/: PAR.ipynb  PAR.py  analyse_2D.py  analyse_2D_spectre.py  analyse_cuda_sos_180.py  analyse_fortran_cuda.py  cdf.py  demo_notebook.ipynb  demo_notebookx.ipynb  gpustruct.py  luts.py  phase.py  profil2.py  progress.py  runOSfromMC.py  smartg.py  smartg_view.py  smartgx.py  tools.py  water_model.py
tools/analyze/: example.sh  list.txt  smartg_analyze.py
tools/phase_function/: ResultGRANU.txt  phase.f  readme
tools/profile/: phase_functions.py  profil.py
tools/visualize_geo/: shape.py  test_changementbase.py  transform.py
tools/water/: iop.py  iop_AOS_water.py  iop_mm.py  iop_spm.py  phase_functions.py  water_absorption.py  water_model.py  water_spm_model.py
validation/: SOS-ths_30-tauray_0.0533-rho_0.0-PP-UP.txt  md5sum.txt
(+106 files in other folders)
