[project]
authors = [
    {name = "Didier Ramon", email = "dr@hygeos.com"},
    {name = "Mustapha Moulana", email = "mm@hygeos.com"}
]
name = "smartg"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "luts @ git+https://github.com/hygeos/luts.git", 
    "core @ git+https://github.com/hygeos/core",
    # "pytest",
    # "pytest-html",
    # "pytest-xdist",
    "xarray",
    "pandas",
    "netcdf4",
    "h5py",
    "papermill",
    # "pycuda",
    "progressbar2",
    "scipy",
    # "ipykernel",
    # "ipywidgets",
    "matplotlib", 
    # "jax", 
    "geoclide", 
    "statsmodels",
]

[project.scripts]
smartg = "smartg.cli:entry"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
smartg = { path = ".", editable = true }

[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
matplotlib-base = "*"
xarray = "*"
pandas = "*"
netcdf4 = "*"
h5py = "*"
papermill = "*"
pycuda = "*"
progressbar2 = "*"
scipy = "*"
ipykernel = "*"
ipywidgets = "*"
matplotlib = "*"

pip = "*"
cudnn = "*" # add to system ?

geoclide = "*"
statsmodels = "*"

[tool.pixi.environments]
default = { features = ["hyp", "sys"], solve-group = "default" }

[tool.pixi.feature.hyp.dependencies]
xarray = "*"
dask = "*"
scipy = "*"
[tool.pixi.feature.sys.dependencies]


[tool.pixi.tasks]
jax_test = "python -c 'import jax; print(jax.devices())'"
packaging = {cmd = "python main.py", cwd = "scripts"}
jax_install = "pip install 'jax[cuda12-local]'"